tests/NormalTests/paczka1/small_fuzzy/12280542.err
Error in line 6: A830 S212 76,1
Error in line 3: WPUBpo A926 18,9
Error in line 12: A830 A926 60,8
